[package]
name = "prefix_sum"
version = "0.1.0"
authors = ["Alice Ryhl <alice@ryhl.io>"]
edition = "2018"

[dependencies]
num-bigint = { version = "~0.2.0", optional = true }
num-rational = { version = "~0.2.0", optional = true }
num-complex = { version = "~0.2.0", optional = true }

[features]
num = ["num-bigint", "num-rational", "num-complex"]

[package.metadata.docs.rs]
features = ["num"]
